--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -134,7 +134,7 @@
                                 <img src="	https://static11.samsungcard.com/wcms/home/scard/image/personal/DN_AAP1877.gif"
                                      alt="카드2">
                             </a>
-                            <h3 class="orig-name">파멸의 예언자</h3>
+                            <h3 class="orig-name">파멸의 예언자 박효빈</h3>
                         </article>
 
                         <!-- 카드 3 -->
@@ -185,7 +185,7 @@
                                 <img src="https://item.kakaocdn.net/do/221e5f43bfec8da08db90dd41d7e80879f5287469802eca457586a25a096fd31"
                                      alt="카드2">
                             </a>
-                            <h3 class="orig-name">파멸의 예언자</h3>
+                            <h3 class="orig-name">파멸의 예언자 박효빈</h3>
                         </article>
 
                         <!-- 카드 3 -->
